apps/quiz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz
  labels:
    backstage.io/kubernetes-id: quiz
spec:
  selector:
    app: quiz
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      appProtocol: kubernetes.io/ws
  type: ClusterIP
