apps/quiz/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-frontend
  labels:
    app: quiz
spec:
  selector:
    app: quiz
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-backend
  labels:
    app: quiz
spec:
  selector:
    app: quiz
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quiz
  labels:
    backstage.io/kubernetes-id: quiz
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - "quiz.bergtobias.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io
      backendRefs:
        - name: quiz-backend
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: quiz-frontend
          port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz
  labels:
    app: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
        - name: quiz-backend
          imagePullPolicy: Always
          image: ghcr.io/bergtobias/quiz-backend:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
        - name: quiz-frontend
          imagePullPolicy: Always
          image: ghcr.io/bergtobias/quiz-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
